--- a/.npmignore
+++ b/.npmignore
@@ -2,7 +2,8 @@
 .idea/
 nbproject/
 
-.DS_Store
+*.log
+node_modules
 
 tmp/**
 tmp/**/*
@@ -27,13 +28,24 @@ Thumbs.db
 # Folder config file
 Desktop.ini
 
-/node_modules/
-node_modules/
+# Local configuration file (sdk path, etc)
+local.properties
 
-bin/**
-bin/**/*
-dist/**
-dist/**/*
+# IOS / Xcode
+build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+xcuserdata
+profile
+*.moved-aside
 
-.idea/**
-.idea/**/*
+# OSX
+.DS_Store
