--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "registry"
   ],
   "lib_name": "service-locator",
-  "license": "MIT",
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/Rapid-Application-Development-JS/ServiceLocator/blob/master/LICENSE.md"
+  },
   "main": [
     "release/service-locator.min.js",
     "release/service-locator.min.js.map"
