--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ indent_style = tab
 indent_size = 4
 insert_final_newline = true
 
-[**.html]
+[**.{css,htm,html}]
 indent_style = tab
 indent_size = 4
 insert_final_newline = false
