--- a/package.json
+++ b/package.json
@@ -22,15 +22,23 @@
     "chai": "*",
     "grunt": "^0.4.*",
     "grunt-contrib-clean": "^0.6.*",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.*",
     "grunt-contrib-uglify": "^0.9.*",
     "grunt-stripcomments": "^0.3.*",
     "gulp": "^3.*",
+    "gulp-concat": "^2.5.2",
     "gulp-rename": "^1.2.*",
     "gulp-sourcemaps": "^1.5.*",
     "gulp-uglify": "^1.2.0",
     "mocha": "*",
     "uglifyjs": "^2.*"
+  },
+  "directories": {
+    "doc": "docs",
+    "example": "example",
+    "lib": "source",
+    "man": "man"
   },
   "homepage": "https://github.com/Rapid-Application-Development-JS/ServiceLocator",
   "keywords": [
@@ -59,5 +67,5 @@
     "build-cli": "uglifyjs 'source/servicelocator.js' --compress --mangle --screw-ie8 --comments --lint --source-map 'release/servicelocator.min.js.map' --output 'release/servicelocator.min.js'",
     "test": "mocha"
   },
-  "version": "1.0.3"
+  "version": "1.0.4"
 }
